# chat_with_pdfs_csvs_databases_multimodal_pdfs

./: Dockerfile  main.py  pyproject.toml  requirements.txt
application/: __init__.py  agent_backend.py  multimodal_rag_tool.py  rag_tool.py  sql_tool.py  views.py
application/static/: base.css  chat.css  chat.js  home.css  home.js
application/templates/: base.html  chat.html  home.html
downloads/csvs xlsxs dbs/: titanic.db
vectordbs/stories.pdf/: chroma.sqlite3
