[project]
name = "chat-with-pdfs-csvs-databases-python-3-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.18",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "asgiref>=3.8.1",
    "asttokens>=3.0.0",
    "attrs>=25.3.0",
    "backoff>=2.2.1",
    "bcrypt>=4.3.0",
    "blinker>=1.9.0",
    "build>=1.2.2.post1",
    "cachelib>=0.13.0",
    "cachetools>=5.5.2",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.1",
    "chroma>=0.2.0",
    "chroma-hnswlib>=0.7.6",
    "chromadb>=0.6.3",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "dataclasses-json>=0.6.7",
    "decorator>=5.2.1",
    "deprecated>=1.2.18",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "durationpy>=0.9",
    "executing>=2.2.0",
    "fastapi>=0.115.12",
    "filelock>=3.18.0",
    "flask>=3.1.0",
    "flask-session>=0.8.0",
    "flatbuffers>=25.2.10",
    "frozenlist>=1.6.0",
    "fsspec>=2025.3.2",
    "google-auth>=2.39.0",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.1",
    "groq>=0.23.1",
    "grpcio>=1.71.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "huggingface-hub>=0.30.2",
    "humanfriendly>=10.0",
    "idna>=3.10",
    "importlib-metadata>=8.6.1",
    "importlib-resources>=6.5.2",
    "ipython>=8.36.0",
    "ipython-pygments-lexers>=1.1.1",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.9.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "kubernetes>=32.0.1",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-groq>=0.3.2",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.14",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.34",
    "langgraph-checkpoint>=2.0.25",
    "langgraph-prebuilt>=0.1.8",
    "langgraph-sdk>=0.1.63",
    "langsmith>=0.3.37",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "marshmallow>=3.26.1",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "mmh3>=5.1.0",
    "monotonic>=1.6",
    "mpmath>=1.3.0",
    "msgspec>=0.19.0",
    "multidict>=6.4.3",
    "mypy-extensions>=1.1.0",
    "numpy>=2.2.5",
    "oauthlib>=3.2.2",
    "onnxruntime>=1.21.1",
    "openai>=1.76.0",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-exporter-otlp-proto-common>=1.32.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.32.1",
    "opentelemetry-instrumentation>=0.53b1",
    "opentelemetry-instrumentation-asgi>=0.53b1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-proto>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-semantic-conventions>=0.53b1",
    "opentelemetry-util-http>=0.53b1",
    "orjson>=3.10.16",
    "ormsgpack>=1.9.1",
    "overrides>=7.7.0",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "posthog>=4.0.0",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.1",
    "protobuf>=5.29.4",
    "pure-eval>=0.2.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pydantic-settings>=2.9.1",
    "pygments>=2.19.1",
    "pypdf>=5.4.0",
    "pypika>=0.48.9",
    "pyproject-hooks>=1.2.0",
    "pyprojroot>=0.3.0",
    "pyreadline3>=3.5.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "rich>=14.0.0",
    "rsa>=4.9.1",
    "setuptools>=80.0.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.40",
    "stack-data>=0.6.3",
    "starlette>=0.46.2",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typer>=0.15.2",
    "typing>=3.10.0.0",
    "typing-extensions>=4.13.2",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "unstructured[local-inference]>=0.17.2",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.2",
    "watchfiles>=1.0.5",
    "wcwidth>=0.2.13",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "wrapt>=1.17.2",
    "xxhash>=3.5.0",
    "yarl>=1.20.0",
    "zipp>=3.21.0",
    "zstandard>=0.23.0",
]
